Fixed the clipping of the insurance clipboard on FAQ page

--- a/client/src/Components/UpdatesDiv/style.css
+++ b/client/src/Components/UpdatesDiv/style.css
@@ -3,12 +3,12 @@
   justify-content: center;
   align-items: center;
   height: 55vh; 
-  overflow: hidden;
   /* transform: translate(33px, 0%); */
 }
 
 .clipboard {
   max-width: 100%;
+  max-height: 375px;
 }
 
 .devMessage {
